--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-ble-manager": "^11.5.6",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "^2.20.2",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "^3.16.1",
+    "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.8.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
