--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-ble-manager": "^11.5.6",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.16.1",
